# miniRT

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  compile_flags.txt
.github/workflows/: build.yml  ctest.yml  norm.yml
include/: camera.h  config.h  debug.h  mlx_utils.h  parser.h  ray.h  scene.h  tracer.h  vector.h
libft/: Makefile
libft/include/: ft_math.h
libft/math/: ft_even.c  ft_pow.c  ft_to_degree.c  ft_to_radian.c
libft/tests/: CMakeLists.txt  math.cpp
scenes/: all.rt  all_checker.rt  basic_plane.rt  basic_plane_bump.rt  basic_sphere.rt  basic_sphere_bump.rt  colorful.rt  colorful_side.rt  cone_plane_bump.rt  cylinder_plane.rt  sample_material.rt  wide_cone_bump.rt
scenes/bump/: hm.xpm  rock.xpm
src/: main.c
src/camera/: camera.c
src/config/: constructor.c  destructor.c  exit.c  is_in_range.c  parse.c  parse_double.c  parse_line.c  parse_line_each_object.c  parse_line_env.c  parse_line_object.c  parse_uint.c  parse_vec_str.c  utils.c
src/debug/: print_config.c  print_object.c  print_vec.c
src/mlx/: constructor.c  destructor.c  handler.c  hook.c  put_pixel.c  render.c
src/ray/: ray.c
src/scene/: constructor.c  destructor.c  load_height_map.c  parse.c  parse_double.c  parse_line_each_object.c  parse_line_env.c  parse_line_object.c  parse_uint.c  parse_vec_str.c  utils.c
src/tracer/: calculate_diffuse.c  calculate_specular.c  checkers.c  conical_bump.c  conical_checker.c  cylindrical_bump.c  cylindrical_checker.c  find_nearest_hit.c  fix_by_axis.c  height_map.c  hit_circle.c  hit_cone.c  hit_cylinder.c  hit_func.c  hit_plane.c  hit_sphere.c  is_illuminated.c  planar_bump.c  quadratic.c  ray_color.c  render.c  spherical_bump.c
src/vector/: basic_operations.c  basic_operations_scalar.c  bound.c  color.c  color_pallet.c  comparison.c  constructor.c  constructor_axis.c  getter_rgb.c  getter_vec.c  interpolate.c  operations.c  optical.c  rotate.c  utility.c
tests/: CMakeLists.txt  test_parser.cpp  test_vector.cpp
